// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A standard order 1`] = `
.c1 {
  min-height: 100px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px 24px;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1:first-child {
  margin-top: 64px;
}

.c5 {
  font-size: 14px;
  padding-left: 40px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c5:first-child {
  padding-left: 0;
}

.c5::before {
  position: absolute;
  left: -9999em;
  top: -30px;
  font-size: 1.286em;
  line-height: 0;
  content: "Date";
}

.c6 {
  font-size: 14px;
  padding-left: 40px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c6:first-child {
  padding-left: 0;
}

.c6::before {
  position: absolute;
  left: -9999em;
  top: -30px;
  font-size: 1.286em;
  line-height: 0;
  content: "Order";
}

.c10 {
  font-size: 14px;
  padding-left: 40px;
}

.c10:first-child {
  padding-left: 0;
}

.c10::before {
  position: absolute;
  left: -9999em;
  top: -30px;
  font-size: 1.286em;
  line-height: 0;
  content: "Items";
}

.c13 {
  font-size: 14px;
  padding-left: 40px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c13:first-child {
  padding-left: 0;
}

.c13::before {
  position: absolute;
  left: -9999em;
  top: -30px;
  font-size: 1.286em;
  line-height: 0;
  content: "Total";
}

.c15 {
  font-size: 14px;
  padding-left: 40px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c15:first-child {
  padding-left: 0;
}

.c15::before {
  position: absolute;
  left: -9999em;
  top: -30px;
  font-size: 1.286em;
  line-height: 0;
  content: "Status";
}

.c19 {
  font-size: 14px;
  padding-left: 40px;
}

.c19:first-child {
  padding-left: 0;
}

.c19::before {
  position: absolute;
  left: -9999em;
  top: -30px;
  font-size: 1.286em;
  line-height: 0;
  content: none;
}

.c9 {
  -webkit-flex: 1 0 200px;
  -ms-flex: 1 0 200px;
  flex: 1 0 200px;
}

.c18 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c4 {
  -webkit-flex: 1 0 100px;
  -ms-flex: 1 0 100px;
  flex: 1 0 100px;
}

.c11 {
  padding: 0;
  list-style: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c24 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 400 14px/24px "Open Sans",sans-serif;
  text-transform: uppercase;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 2px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c24:hover,
.c24:focus {
  color: #fff;
}

.c24:hover,
.c24:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c24:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c23 {
  background-repeat: no-repeat;
  background-image: url( download.svg );
  background-position: 8px 50%;
  background-size: 24px;
  padding-left: 36px;
}

.c22 {
  min-width: 152px;
}

.c21 .screen-reader-text {
  position: static;
  -webkit-clip-path: none;
  clip-path: none;
}

@media screen and ( max-width:800px ) {
  .c1 {
    padding: 16px;
  }
}

@media screen and ( max-width:800px ) {
  .c0 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }

  .c0:first-child {
    margin-top: 0;
  }

  .c0 > span::before {
    position: static;
    display: inline-block;
    padding-right: 0.5em;
    font-size: inherit;
  }
}

@media screen and ( max-width:1355px ) {
  .c5 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:1355px ) {
  .c6 {
    padding-left: 20px;
    display: none;
  }
}

@media screen and ( max-width:800px ) {
  .c6 {
    display: none;
  }
}

@media screen and ( max-width:1355px ) {
  .c10 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:1355px ) {
  .c13 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:1355px ) {
  .c15 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:1355px ) {
  .c19 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:800px ) {
  .c9 {
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
  }
}

@media screen and ( max-width:800px ) {
  .c11 {
    overflow: hidden;
  }
}

@media screen and ( max-width:800px ) {
  .c3::before {
    float: left;
    min-width: 60px;
    line-height: inherit;
    font-weight: 700;
    content: "Date:";
  }

  .c3 > span {
    line-height: inherit;
  }
}

@media screen and ( max-width:800px ) {
  .c12::before {
    float: left;
    min-width: 60px;
    line-height: inherit;
    font-weight: 700;
    content: "Total:";
  }

  .c12 > span {
    line-height: inherit;
  }
}

@media screen and ( max-width:800px ) {
  .c14::before {
    float: left;
    min-width: 60px;
    line-height: inherit;
    font-weight: 700;
    content: "Status:";
  }

  .c14 > span {
    line-height: inherit;
  }
}

@media screen and ( max-width:800px ) {
  .c2 {
    min-width: 100%;
    margin-top: 1em;
    padding-right: 0;
    padding-left: 0;
  }

  .c2:first-child {
    margin-top: 0px;
  }
}

@media screen and ( max-width:800px ) {
  .c8::before {
    float: left;
    min-width: 60px;
    line-height: inherit;
    font-weight: 700;
    content: "Items:";
  }

  .c8 > span {
    line-height: inherit;
  }
}

@media screen and ( max-width:800px ) {
  .c7 {
    min-width: 100%;
    margin-top: 1em;
    padding-right: 0;
    padding-left: 0;
  }

  .c7:first-child {
    margin-top: 0px;
  }
}

@media screen and ( max-width:800px ) {
  .c17::before {
    float: left;
    min-width: 60px;
    line-height: inherit;
    font-weight: 700;
    content: none;
  }

  .c17 > span {
    line-height: inherit;
  }
}

@media screen and ( max-width:800px ) {
  .c16 {
    min-width: 100%;
    margin-top: 1em;
    padding-right: 0;
    padding-left: 0;
  }

  .c16:first-child {
    margin-top: 0px;
  }
}

@media screen and (min-width:801px) and (max-width:1355px) {
  .c21 {
    padding-right: 0;
    padding-left: 42px;
    min-width: 0;
    vertical-align: middle;
  }

  .c21 .screen-reader-text {
    position: absolute;
    -webkit-clip: rect(1px,1px,1px,1px);
    clip: rect(1px,1px,1px,1px);
    -webkit-clip-path: inset(50%);
    clip-path: inset(50%);
  }
}

@media screen and ( max-width:800px ) {
  .c20 {
    width: 100%;
    background-image: none;
    padding: 12px 16px;
  }
}

<li
  className="c0 c1"
>
  <span
    className="c2 c3 c4 c5"
  >
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="c4 c6"
  >
    MOOIE 456 TEST
  </span>
  <span
    className="c7 c8 c9 c10"
  >
    <ul
      className="c11"
    >
      <li
        className=""
      >
        1
        x 
        Name of the product
      </li>
      <li
        className=""
      >
        2
        x 
        Another product
      </li>
    </ul>
  </span>
  <span
    className="c2 c12 c4 c13"
  >
    <span>
      $100.00
    </span>
  </span>
  <span
    className="c2 c14 c4 c15"
  >
    <span>
      Completed
    </span>
  </span>
  <span
    className="c16 c17 c18 c19"
  >
    <div>
      <a
        aria-label="Download invoice"
        className="c20 c21 c22 c23 c24"
        href="https://my.yoast.com/api/Orders/1/invoice?access_token="
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="screen-reader-text"
        >
          Invoice
        </span>
      </a>
    </div>
  </span>
</li>
`;

exports[`An Order with a disabled invoice button 1`] = `
.c1 {
  min-height: 100px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px 24px;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1:first-child {
  margin-top: 64px;
}

.c5 {
  font-size: 14px;
  padding-left: 40px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c5:first-child {
  padding-left: 0;
}

.c5::before {
  position: absolute;
  left: -9999em;
  top: -30px;
  font-size: 1.286em;
  line-height: 0;
  content: "Date";
}

.c6 {
  font-size: 14px;
  padding-left: 40px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c6:first-child {
  padding-left: 0;
}

.c6::before {
  position: absolute;
  left: -9999em;
  top: -30px;
  font-size: 1.286em;
  line-height: 0;
  content: "Order";
}

.c10 {
  font-size: 14px;
  padding-left: 40px;
}

.c10:first-child {
  padding-left: 0;
}

.c10::before {
  position: absolute;
  left: -9999em;
  top: -30px;
  font-size: 1.286em;
  line-height: 0;
  content: "Items";
}

.c13 {
  font-size: 14px;
  padding-left: 40px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c13:first-child {
  padding-left: 0;
}

.c13::before {
  position: absolute;
  left: -9999em;
  top: -30px;
  font-size: 1.286em;
  line-height: 0;
  content: "Total";
}

.c15 {
  font-size: 14px;
  padding-left: 40px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c15:first-child {
  padding-left: 0;
}

.c15::before {
  position: absolute;
  left: -9999em;
  top: -30px;
  font-size: 1.286em;
  line-height: 0;
  content: "Status";
}

.c19 {
  font-size: 14px;
  padding-left: 40px;
}

.c19:first-child {
  padding-left: 0;
}

.c19::before {
  position: absolute;
  left: -9999em;
  top: -30px;
  font-size: 1.286em;
  line-height: 0;
  content: none;
}

.c9 {
  -webkit-flex: 1 0 200px;
  -ms-flex: 1 0 200px;
  flex: 1 0 200px;
}

.c18 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c4 {
  -webkit-flex: 1 0 100px;
  -ms-flex: 1 0 100px;
  flex: 1 0 100px;
}

.c11 {
  padding: 0;
  list-style: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c24 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 400 14px/24px "Open Sans",sans-serif;
  text-transform: uppercase;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 2px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c24:hover,
.c24:focus {
  color: #fff;
}

.c24:hover,
.c24:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c24:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c23 {
  background-repeat: no-repeat;
  background-image: url( download.svg );
  background-position: 8px 50%;
  background-size: 24px;
  padding-left: 36px;
}

.c22 {
  min-width: 152px;
}

.c21 .screen-reader-text {
  position: static;
  -webkit-clip-path: none;
  clip-path: none;
}

@media screen and ( max-width:800px ) {
  .c1 {
    padding: 16px;
  }
}

@media screen and ( max-width:800px ) {
  .c0 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }

  .c0:first-child {
    margin-top: 0;
  }

  .c0 > span::before {
    position: static;
    display: inline-block;
    padding-right: 0.5em;
    font-size: inherit;
  }
}

@media screen and ( max-width:1355px ) {
  .c5 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:1355px ) {
  .c6 {
    padding-left: 20px;
    display: none;
  }
}

@media screen and ( max-width:800px ) {
  .c6 {
    display: none;
  }
}

@media screen and ( max-width:1355px ) {
  .c10 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:1355px ) {
  .c13 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:1355px ) {
  .c15 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:1355px ) {
  .c19 {
    padding-left: 20px;
  }
}

@media screen and ( max-width:800px ) {
  .c9 {
    -webkit-flex-shrink: 1;
    -ms-flex-negative: 1;
    flex-shrink: 1;
  }
}

@media screen and ( max-width:800px ) {
  .c11 {
    overflow: hidden;
  }
}

@media screen and ( max-width:800px ) {
  .c3::before {
    float: left;
    min-width: 60px;
    line-height: inherit;
    font-weight: 700;
    content: "Date:";
  }

  .c3 > span {
    line-height: inherit;
  }
}

@media screen and ( max-width:800px ) {
  .c12::before {
    float: left;
    min-width: 60px;
    line-height: inherit;
    font-weight: 700;
    content: "Total:";
  }

  .c12 > span {
    line-height: inherit;
  }
}

@media screen and ( max-width:800px ) {
  .c14::before {
    float: left;
    min-width: 60px;
    line-height: inherit;
    font-weight: 700;
    content: "Status:";
  }

  .c14 > span {
    line-height: inherit;
  }
}

@media screen and ( max-width:800px ) {
  .c2 {
    min-width: 100%;
    margin-top: 1em;
    padding-right: 0;
    padding-left: 0;
  }

  .c2:first-child {
    margin-top: 0px;
  }
}

@media screen and ( max-width:800px ) {
  .c8::before {
    float: left;
    min-width: 60px;
    line-height: inherit;
    font-weight: 700;
    content: "Items:";
  }

  .c8 > span {
    line-height: inherit;
  }
}

@media screen and ( max-width:800px ) {
  .c7 {
    min-width: 100%;
    margin-top: 1em;
    padding-right: 0;
    padding-left: 0;
  }

  .c7:first-child {
    margin-top: 0px;
  }
}

@media screen and ( max-width:800px ) {
  .c17::before {
    float: left;
    min-width: 60px;
    line-height: inherit;
    font-weight: 700;
    content: none;
  }

  .c17 > span {
    line-height: inherit;
  }
}

@media screen and ( max-width:800px ) {
  .c16 {
    min-width: 100%;
    margin-top: 1em;
    padding-right: 0;
    padding-left: 0;
  }

  .c16:first-child {
    margin-top: 0px;
  }
}

@media screen and (min-width:801px) and (max-width:1355px) {
  .c21 {
    padding-right: 0;
    padding-left: 42px;
    min-width: 0;
    vertical-align: middle;
  }

  .c21 .screen-reader-text {
    position: absolute;
    -webkit-clip: rect(1px,1px,1px,1px);
    clip: rect(1px,1px,1px,1px);
    -webkit-clip-path: inset(50%);
    clip-path: inset(50%);
  }
}

@media screen and ( max-width:800px ) {
  .c20 {
    width: 100%;
    background-image: none;
    padding: 12px 16px;
  }
}

<li
  className="c0 c1"
>
  <span
    className="c2 c3 c4 c5"
  >
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="c4 c6"
  >
    MOOIE 456 TEST
  </span>
  <span
    className="c7 c8 c9 c10"
  >
    <ul
      className="c11"
    >
      <li
        className=""
      >
        1
        x 
        Name of the product
      </li>
      <li
        className=""
      >
        2
        x 
        Another product
      </li>
    </ul>
  </span>
  <span
    className="c2 c12 c4 c13"
  >
    <span>
      $100.00
    </span>
  </span>
  <span
    className="c2 c14 c4 c15"
  >
    <span>
      Pending
    </span>
  </span>
  <span
    className="c16 c17 c18 c19"
  >
    <div>
      <a
        aria-label="Download invoice"
        className="c20 c21 c22 c23 c24"
        href="https://my.yoast.com/api/Orders/1/invoice?access_token="
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="screen-reader-text"
        >
          Invoice
        </span>
      </a>
    </div>
  </span>
</li>
`;
